--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <aside>
             <div>
                 <header>
-
+                    <a href="./"><img src="./imagenes/sofex_logo.png"></a>
                 </header>
                 <ul>
                     <li><button><i class="bi bi-columns"></i></button></li>
@@ -27,32 +27,54 @@
                 </ul>
             </div>
             <div class="power-off">
-                <i class="bi bi-power"></i>
+                <button><i class="bi bi-power"></i></button>
             </div>
         </aside>
         <section>
             <nav>
-                <div><i class="fa-sharp fa-solid fa-bars"></i></div>
+                <div><button><i class="fa-sharp fa-solid fa-bars"></i></button></div>
                 <ul>
-                    <li><i class="bi bi-bell"></i></li>
-                    <li><i class="bi bi-person"></i></li>
+                    <li><button><i class="bi bi-bell"></i></button></li>
+                    <li><button><i class="bi bi-person"></i></button></li>
                 </ul>
             </nav>
             <article>
                 <header>
                     <h1 class="title-users">Usuarios</h1>
                     <ul class="icons-format">
-                        <li><i class="bi bi-list-task"></i></li>
-                        <li><i class="bi bi-grid"></i></li>
+                        <li><button><i class="bi bi-list-task"></i></button></li>
+                        <li><button><i class="bi bi-grid"></i></button></li>
                     </ul>
                 </header>
                 <div class="users">
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+
+                        <div class="card-profile-photo"></div>
+
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
+                        </div>
+
+                        <div class="info">
+                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
+                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
+                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -61,11 +83,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -74,24 +99,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
-                        </div>
-                        <div class="info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -101,11 +116,14 @@
                     </div>
 
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -114,11 +132,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -127,11 +148,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -140,11 +164,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -154,11 +181,14 @@
                     </div>
 
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -167,11 +197,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -180,11 +213,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
@@ -193,11 +229,14 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="profilephoto"></div>
-                        <div class="background-img">
-                            <p>
-                                Kyle Adams
-                            </p>
+                        <div class="card-profile-photo"></div>
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <p>
+                                    Kyle Adams
+                                </p>
+                            </div>
+
                         </div>
                         <div class="info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
