added padding aside and fixed img background card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <aside>
             <div>
                 <header>
-                    <a href="./"><img src="./imagenes/sofex_logo.png"></a>
+                    <a href="https://sofex.com.mx/"><img src="./imagenes/sofex_logo.png"></a>
                 </header>
                 <ul>
                     <li><button><i class="bi bi-columns"></i></button></li>
@@ -53,197 +53,217 @@
 
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-profile-photo"></div>
-                        <div class="card-header">
-                            <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-profile-photo"></div>
-                        <div class="card-header">
-                            <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
+
                         <div class="card-profile-photo"></div>
+
                         <div class="card-header">
                             <div class="card-header-image">
-                                <p>
-                                    Kyle Adams
-                                </p>
+                                <img src="./imagenes/juegodeajedrez.avif">
                             </div>
-
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
                         </div>
-                        <div class="info">
+                        <div class="card-info">
                             <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
                             <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
                             <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
+                    <div class="card">
+
+                        <div class="card-profile-photo"></div>
+
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <img src="./imagenes/juegodeajedrez.avif">
+                            </div>
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
+                        </div>
+                        <div class="card-info">
+                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
+                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
+                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                        </div>
+                    </div>
+                    <div class="card">
+
+                        <div class="card-profile-photo"></div>
+
+                        <div class="card-header">
+                            <div class="card-header-image">
+                                <img src="./imagenes/juegodeajedrez.avif">
+                            </div>
+                            <h3 class="card-header-title">
+                                Kyle Adams
+                            </h3>
+                        </div>
+                        <div class="card-info">
+                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
+                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
+                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                        </div>
+                    </div>
+
 
                 </div>
             </article>
