--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/d1a65bfa49.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,9 +59,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -78,9 +77,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -96,9 +95,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -114,9 +113,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -132,9 +131,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -150,9 +149,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -168,9 +167,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -186,9 +185,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -204,9 +203,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -222,9 +221,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -240,9 +239,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
                     <div class="card">
@@ -258,9 +257,9 @@
                             </h3>
                         </div>
                         <div class="card-info">
-                            <p><i class="fa-solid fa-envelope"></i> 123email@gmail.com</p>
-                            <p><i class="fa-solid fa-mobile-button"></i> 1-555-555-5555</p>
-                            <p><i class="fa-solid fa-map-pin"></i> Kulas Light, Apt 328, Texas</p>
+                            <p><i class="bi bi-envelope-fill"></i> 123email@gmail.com</p>
+                            <p><i class="bi bi-phone-fill"></i> 1-555-555-5555</p>
+                            <p><i class="bi bi-geo-alt-fill"></i> Kulas Light, Apt 328, Texas</p>
                         </div>
                     </div>
 
